--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-15  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+	
 2005-07-15  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
