--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish trasnslation
+
 2005-07-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Update
