Updated Swedish translation.
2005-07-16  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-16  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-07-15  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
