--- a/po/th.po
+++ b/po/th.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-15 14:36-0400\n"
-"PO-Revision-Date: 2005-06-28 17:11+0700\n"
+"PO-Revision-Date: 2005-07-16 21:28+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <L10n@opentle.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=1; plural=0;"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:153 gdk-pixbuf/gdk-pixbuf-io.c:838
 #: gdk-pixbuf/gdk-pixbuf-io.c:1089 tests/testfilechooser.c:218
@@ -1356,14 +1356,13 @@ msgid "Remove the selected bookmark"
 msgstr "ลบที่คั่นหน้าที่เลือกอยู่"
 
 #: gtk/gtkfilechooserdefault.c:3313
-#, fuzzy
 msgid "Could not select file"
-msgstr "เลือกรายการไม่สำเร็จ"
+msgstr "เลือกแฟ้มไม่สำเร็จ"
 
 #: gtk/gtkfilechooserdefault.c:3369
-#, fuzzy, c-format
+#, c-format
 msgid "Could not select file '%s' because it is an invalid path name."
-msgstr "ไม่สามารถเพิ่มที่คั่นหน้าให้กับ '%s' ได้ เพราะไม่ใช่ตำแหน่งที่ใช้ได้"
+msgstr "ไม่สามารถเลือกแฟ้ม '%s' ได้ เพราะไม่ใช่ชื่อพาธที่ใช้ได้"
 
 #: gtk/gtkfilechooserdefault.c:3441
 msgid "_Add to Bookmarks"
@@ -1431,18 +1430,18 @@ msgstr "จุดเชื่อม %s ไม่มีอยู่จริง"
 #: gtk/gtkfilechooserdefault.c:5957
 #, c-format
 msgid "A file named \"%s\" already exists.  Do you want to replace it?"
-msgstr ""
+msgstr "มีแฟ้มชื่อ \"%s\" อยู่ก่อนแล้ว คุณต้องการจะแทนที่แฟ้มหรือไม่?"
 
 #: gtk/gtkfilechooserdefault.c:5960
 #, c-format
 msgid ""
 "The file already exists in \"%s\".  Replacing it will overwrite its contents."
 msgstr ""
+"มีแฟ้มดังกล่าวอยู่แล้วใน \"%s\" หากสั่งแทนที่ก็จะเขียนทับเนื้อหาแฟ้มเดิม"
 
 #: gtk/gtkfilechooserdefault.c:5965
-#, fuzzy
 msgid "_Replace"
-msgstr "เ_ปลี่ยนชื่อ"
+msgstr "แ_ทนที่"
 
 #: gtk/gtkfilechooserdefault.c:6453
 #, c-format
@@ -1710,7 +1709,6 @@ msgid "This file system does not support mounting"
 msgstr "ระบบแฟ้มนี้ไม่รองรับการเมานท์"
 
 #: gtk/gtkfilesystemunix.c:639
-#, fuzzy
 msgid "File System"
 msgstr "ระบบแฟ้ม"
 
