--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-17  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2005-07-16  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
