--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-18  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-07-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
