--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-07-21  Tor Lillqvist  <tml@novell.com>
 
+	* gtk/gtk.symbols: Make GtkPlug/Socket API available on all platforms.
+
+	* gtk/Makefile.am: Changes to build GtkPlug/Socket on all platforms.
+
 	* gtk/gtksocket.c
 	* gtk/gtkplug.c: Splice out backend-dependend parts to separate
 	files, see below.
