Be a bit more careful to not shrink the label to a negative width.
2005-07-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Be
	a bit more careful to not shrink the label to a negative
	width.  (#311175, Thomas Vander Stichele)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-07-21  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Be
+	a bit more careful to not shrink the label to a negative
+	width.  (#311175, Thomas Vander Stichele)
+
 	* gtk/gtk.symbols: mark gtk_socket_steal as deprecated.
 
 	* configure.in: Bump the cairo requirement.
