Added "hy" to ALL_LINGUAS. Added Armenian translation by Lilit Azizbekyan
2005-07-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "hy" to ALL_LINGUAS.
	* po/hy.po, po-properties/hy.po: Added
	Armenian translation by
	Lilit Azizbekyan <lilita@support17> and
	Lilit Sargsyan <magicliliac@yahoo.co.uk>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-21  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "hy" to ALL_LINGUAS.
+
 2005-07-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* NEWS: Updates
