--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-21  Christian Rose  <menthos@menthos.com>
+
+	* hy.po: Added Armenian translation by
+	Lilit Azizbekyan <lilita@support17> and
+	Lilit Sargsyan <magicliliac@yahoo.co.uk>.
+
 2005-07-20  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
