Added "hy" to ALL_LINGUAS. Added Armenian translation by Lilit Azizbekyan
2005-07-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "hy" to ALL_LINGUAS.
	* po/hy.po, po-properties/hy.po: Added
	Armenian translation by
	Lilit Azizbekyan <lilita@support17> and
	Lilit Sargsyan <magicliliac@yahoo.co.uk>.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-21  Christian Rose  <menthos@menthos.com>
+
+	* hy.po: Added Armenian translation by
+	Lilit Azizbekyan <lilita@support17> and
+	Lilit Sargsyan <magicliliac@yahoo.co.uk>.
+
 2005-07-16  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
