--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-21  Christian Rose  <menthos@menthos.com>
+
+	* hy.po: Added Armenian translation by
+	Lilit Azizbekyan <lilita@support17> and
+	Lilit Sargsyan <magicliliac@yahoo.co.uk>.
+
 2005-07-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
