--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-21  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkwidget.c (update_pango_context): Fix a couple of leaks.
+
 2005-07-21  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "hy" to ALL_LINGUAS.
