--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf/tmpl/module_interface.sgml: Document unanchored 
+	patterns.
+
 2005-07-21  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/tmpl/gtkfilechooserdialog.sgml (dialog): Expand the Save
