--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-07-22  Matthias Clasen  <mclasen@redhat.com>
 
+	* NEWS: Updates
+
 	* gtk/gtkmessagedialog.c (gtk_message_dialog_format_secondary_markup): 
 	Point out escaping oversight.  (#311260, Owen Taylor)
 
